--- a/style.css
+++ b/style.css
@@ -2,19 +2,38 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #00224F
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
 
 h2 {
-  font-size: 5 rem;
+  font-size: 2rem;
   font-weight: bold;
+  padding: 3rem;
 }
 
 .coming-soon {
   min-height: 100vh;
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
+.countdown {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+}
+
+.day,.hour,.minute,.second {
+  font-size: 2rem;
+}
+
+.eurovision2022logo {
+  height: 50vh; 
+}
