--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #00224F
+  background-color: #00224F;
 }
 
 body {
@@ -14,7 +14,10 @@ h2 {
   font-size: 2rem;
   font-weight: bold;
   padding: 3rem;
+  text-align: center;
 }
+
+
 
 .coming-soon {
   min-height: 100vh;
@@ -28,6 +31,7 @@ h2 {
   display: flex;
   justify-content: space-around;
   padding: 1rem;
+  text-align: center;
 }
 
 .day,.hour,.minute,.second {
